Modify model name

--- a/entity_resolution.ipynb
+++ b/entity_resolution.ipynb
@@ -312,7 +312,7 @@
     "product_recognition_training_set = './data/product_recognition_train.csv'\n",
     "\n",
     "# precorso al modello allenato di DeepMatcher per la classificazione del matching\n",
-    "deepMatcher_model_path = './data/best_model_official.pth'\n",
+    "deepMatcher_model_path = './data/deepMatcher_model.pth'\n",
     "\n",
     "# sample del dataset da valutare\n",
     "n_sample = 30000\n",
